# ReddiScribe

./: .gitignore  README.ko.md  README.md  pyproject.toml  run.bat  run_mock.bat
docs/: ReddiScribe_Spec_v3.md  settings_사용모델_참고용.yaml
src/: main.py
src/adapters/: llm_adapter.py  ollama_adapter.py  public_json_adapter.py  reddit_adapter.py
src/core/: config_manager.py  database.py  exceptions.py  i18n_manager.py  logger.py  types.py
src/gui/: main_window.py  task_coordinator.py  workers.py
src/gui/widgets/: content_view_dialog.py  reader_widget.py  refine_chat_widget.py  settings_widget.py  top_bar_widget.py  writer_widget.py
src/resources/locales/: en_US.json  ko_KR.json
src/services/: reader_service.py  writer_service.py
tests/: conftest.py  test_config_manager.py  test_database.py  test_i18n_manager.py  test_ollama_adapter.py  test_public_json_adapter.py  test_reader_service.py  test_writer_service.py
